# creativexx

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: ci.yml
CreativeXX/: CMakeLists.txt
CreativeXX/include/: CreativeXX.h
CreativeXX/src/: core.cpp  core.h
CreativeXX/src/Core/: Entry.h
cli/: cli.py
examples/: CMakeLists.txt
examples/sandbox/: CMakeLists.txt
examples/sandbox/src/: Sandbox.cpp  Sandbox.cxx  Sandbox.h  Sandbox.hxx
include/: CreativeXX.h  CreativeXXspec.h  creativexx.hxx  creativexxspec.hxx
sandbox/: CMakeLists.txt  main.cpp
scripts/: build.py  format.py
scripts/ci/: test.sh
scripts/hooks/: pre-commit
scripts/linux/: arch-install.sh  hooks.sh  ubuntu-install.sh
scripts/test/: test.sh
src/: CMakeLists.txt
src/Application/: Application.cpp  Application.h
src/application/: Application.cpp  Application.cxx  Application.h  Application.hxx
src/core/: entry.h  entry.hxx  globals.cxx  globals.hxx  init.cpp  init.cxx  init.h  init.hxx
src/event/: Event.cpp  Event.cxx  Event.h  Event.hxx  EventType.h  EventType.hxx  KeyEvent.cpp  KeyEvent.cxx  KeyEvent.h  KeyEvent.hxx  KeyPressedEvent.cpp  KeyPressedEvent.cxx  KeyPressedEvent.h  KeyPressedEvent.hxx  KeyReleasedEvent.cpp  KeyReleasedEvent.cxx  KeyReleasedEvent.h  KeyReleasedEvent.hxx  MouseButtonEvent.cpp  MouseButtonEvent.cxx  MouseButtonEvent.h  MouseButtonEvent.hxx  MouseButtonPressedEvent.cpp  MouseButtonPressedEvent.cxx  MouseButtonPressedEvent.h  MouseButtonPressedEvent.hxx  MouseButtonReleasedEvent.cpp  MouseButtonReleasedEvent.cxx  MouseButtonReleasedEvent.h  MouseButtonReleasedEvent.hxx  MouseMovedEvent.cpp  MouseMovedEvent.cxx  MouseMovedEvent.h  MouseMovedEvent.hxx  MouseScrolledEvent.cpp  MouseScrolledEvent.cxx  MouseScrolledEvent.h  MouseScrolledEvent.hxx  WindowClosedEvent.cpp  WindowClosedEvent.cxx  (+6 more)
src/image/: Image.cxx  Image.hxx
src/io/: Path.cxx  Path.hxx
src/log/: Log.cpp  Log.cxx  Log.h  Log.hxx  Logger.cpp  Logger.cxx  Logger.h  Logger.hxx  log.cpp  log.h
src/math/: interpolate.cxx  interpolate.hxx
src/renderer/: Texture.cxx  Texture.hxx  texture.cxx  texture.hxx
src/window/: LinuxWindow.cpp  LinuxWindow.cxx  LinuxWindow.h  LinuxWindow.hxx  Window.h  Window.hxx
test/: CMakeLists.txt  working.spec.cpp  working.spec.cxx
test/event/: CMakeLists.txt  KeyPressedEvent.spec.cpp  KeyPressedEvent.spec.cxx  KeyReleasedEvent.spec.cpp  KeyReleasedEvent.spec.cxx  MouseButtonPressedEvent.spec.cpp  MouseButtonPressedEvent.spec.cxx  MouseButtonReleasedEvent.spec.cpp  MouseButtonReleasedEvent.spec.cxx  MouseMovedEvent.spec.cpp  MouseMovedEvent.spec.cxx  MouseScrolledEvent.spec.cpp  MouseScrolledEvent.spec.cxx  WindowClosedEvent.spec.cpp  WindowClosedEvent.spec.cxx  WindowResizedEvent.spec.cpp  WindowResizedEvent.spec.cxx
test/image/: CMakeLists.txt  Image.spec.cxx
test/log/: CMakeLists.txt  Log.spec.cpp  Log.spec.cxx  Logger.spec.cpp  Logger.spec.cxx
test/math/: CMakeLists.txt  interpolate.spec.cxx
test/tools/: CoutRedirect.cpp  CoutRedirect.cxx  CoutRedirect.h  CoutRedirect.hxx
test/window/: CMakeLists.txt  LinuxWindow.spec.cpp  LinuxWindow.spec.cxx
